- Finally got Program.Clear right!

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 				background: transparent;
 				line-height: 2px;
 			}
-			.clear-anchor {
-				height: 0;
-				line-height: 0;
-				float: left;
-				overflow: hidden;
+			.clear {
+				float: right;
+				height: 100%;
+				width: 1;
 			}
 		</style>
 	</head>
 	<body>
 		<div id="terminal"></div>
 		<script src="mootools.js"></script>
+		<script src="mootools.extensions.js"></script>
 		<script src="mootools.terminal.js"></script>
 		<script src="mootools.program.js"></script>
 		<script src="mootools.program.shell.js"></script>
