- Added echo() method to Temrinal for easier buffer management.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				background: transparent;
 				line-height: 2px;
 			}
-			.clear {
+			.clear-spacer {
 				float: right;
 				height: 100%;
 				width: 1;
