- Working on an argument parser (getopt).

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<div id="terminal"></div>
 		<script src="mootools.js"></script>
 		<script src="mootools.extensions.js"></script>
+		<script src="mootools.optionparser.js"></script>
 		<script src="mootools.terminal.js"></script>
 		<script src="mootools.program.js"></script>
 		<script src="mootools.program.shell.js"></script>
